@@ -1,7 +1,7 @@
 #!/bin/sh
 
 #
-# Program: DO..config
+# Program: DO.config
 #
 # Purpose:
 #
@@ -13,6 +13,9 @@
 #   set environment variables for DO load
 #
 # History:
+#
+# 10/03/2016	lec
+#	- TR12427/Disease Ontology
 #
 
 cd `dirname $0` 
@@ -38,7 +41,7 @@ export DEFS_FILE
 USE_SYNONYM_TYPE=1
 export USE_SYNONYM_TYPE
 
-LOAD_PROGRAM="${LOAD_PROGRAM}"
+LOAD_PROGRAM="${LOAD_PROGRAM} DOmgislim.sh"
 RCD_FILE="DO.rcd"
 export LOAD_PROGRAM
 export RCD_FILE
@@ -54,7 +57,6 @@ export MAINTAINER
 VOCAB_NAME="Disease Ontology"       # name of vocabulary (VOC_Vocab.name)
 VOCAB_COMMENT_KEY=1000  # name of note types for comments
 ACC_PREFIX="DOID"       # acc ID prefix
-#JNUM="J:235125"         # reference for this vocabulary
 JNUM="J:98535"          # reference for this vocabulary
 IS_SIMPLE=0             # structured vocabulary; should be a .rcd file
 IS_PRIVATE=0            # acc IDs are public
@@ -74,4 +76,12 @@ export LOGICALDB_KEY
 export ANNOT_TYPE_KEY
 export MGITYPE
 export DAG_ROOT_ID
+
+#
+# for doi.obo/subset: DO_MGI_slim
+# name of a domgislim.txt file that is generated by loadOBO.py/parseOBOFile()
+# see also: DOmgislim.config
+#
+DO_MGI_SLIM_FILE="${RUNTIME_DIR}/domgislim.txt"
+export DO_MGI_SLIM_FILE
 
