@@ -1,16 +1,24 @@
 #!/bin/csh -f
 
 #
-# default configuration file
+# Program: DOmgislim.config
+#
+# Purpose:
+#
+#   Configuration file for Disease Ontology loading into MGI_Set/MGI_SetMember table (setload)
+#
+# History:
+#
+# 10/03/2016	lec
+#	- TR12427/Disease Ontology
 #
 
 source ${SETLOAD}/Configuration
 
 setenv SETMODE		load
-#setenv SETMODE		preview
 setenv SETDATADIR	`pwd`
-setenv SETINPUTFILE	${SETDATADIR}/domgislim.txt
-setenv SETLOG		${SETDATADIR}/domgislim.log
+setenv SETINPUTFILE	${RUNTIME_DIR}/domgislim.txt
+setenv SETLOG		${RUNTIME_DIR}/domgislim.log
 setenv SETNAME		"DO_MGI_slim"
 setenv SETTYPE		"Vocabulary Term"
 setenv CREATEDBY	smb
