@@ -1,7 +1,15 @@
-TAG: vocload-6-0-?-?
+TAG: vocload-6-0-8-?
 DATE: 09/30/2016
 STAFF: lec
 TR12427/DO (Disease Ontology)
+new file:   DO.config
+new file:   DO.rcd
+new file:   DOmgislim.config
+modified:   HISTORY
+modified:   Install
+modified:   OBOParser.py
+modified:   loadOBO.py
+modified:   loadTerms.py
 
 TAG: vocload-6-0-5-4
 DATE: 09/26/2016
